fix toggleTabs sticky y datos header visibles (261)

--- a/src/App.css
+++ b/src/App.css
@@ -537,7 +537,7 @@ button[type=submit] {
     flex-direction: column;
     max-height: 100vh;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .content {
@@ -549,6 +549,12 @@ button[type=submit] {
   background-color: #f0f0f0;
   color: #000;
   border: 1px solid #ddd;
+}
+
+.toggleListaSpace {
+    position: sticky;
+    z-index: 900;
+    background-color: white;
 }
 
 .ToggleLista {
